-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.2
-
Component/s: Drivers: Other
-
Labels:None
-
Environment:
Operating System: ReactOS
Platform: x86 Hardware
URL: http://www.praim.it/Supporto/Download/XRun/ARD10011Ev.exe
-
Sprint:May 2016
-
External URL:
-
External issue ID:4202
Official 39781.
While testing advanced remote desktop I noticed a problem with the short version of long file names.
When you launch the installer (pwd: 'PARIS'), it extracts the setup to a temporary folder, the first time it works, quit the installation, if you launch the installer again it doesn't find the extracted setup.exe, if you delete the created folder you're able to install again.
In the first try, the files get extracted to
c:\documents and settings\ADMINI~1~REA (XP seems to behave like this too.)
A dir /X there shows:
ADMINI~1 ADMINISTRATOR
ADMINI~1.REA ADMINISTRATOR.REACTOS
ADMINI~2 ADMINI~1~REA
If I rename with explorer ADMINI~1~REA to ADMINI~2~REA
a dir /x now shows
ADMINI~3 ADMINI~2~REA
That is, the short version of the filename got modified too. In XP this operation doesn't change the short filename version, this could be related to the fact that the installer doesn't find setup.exe the second time it's launched.
- is blocked by
-
CORE-7272 Implement FsRtlTunnelCache function
-
- Resolved
-