[KERNEL32_APITEST] Add simple tests regarding renaming and tunnel cache behavior for short names in user mode. Longer tests should be added to show what happens in case of cache expiry. All pass on w2k3 but not on ReactOS.

CORE-3875

svn path=/trunk/; revision=67897